perf: img optimize

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "scss": "typed-scss-modules src --watch",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
